# staqkit

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.config/: .markdownlint.jsonc  .markdownlintignore  .prettierignore  .prettierrc  ruff.toml
docs/: README.md  architecture.md  directory-layout.md  requirements.md  toolstack.md
docs/components/: cli.md  datastore.md  external-data.md  pipeline-gen.md  stage.md
src/sard/: __init__.py
src/staqkit/: __init__.py
tests/: test_placeholder.py
