[project]
name = "sard"
version = "0.1.0"
description = "A structured-analysis framework designed for reproducible research data management"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Y Sakashita", email = "73250095+sakashita44@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.1",
    "dvc>=3.67.0",
    "networkx>=3.6.1",
    "pandera>=0.30.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.19.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
